--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/Joran/Git/AppelBaum 2.0/AppleBaum.apk"
+export_path="C:/Users/Joran/Git/AppleBaum/APK Dock/AppleBaum.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -21,11 +21,11 @@ custom_package/release=""
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
-package/unique_name="AppleBaum.apk"
-package/name=""
+package/unique_name="AppelBaum.apk"
+package/name="AppelBaum"
 package/signed=true
 screen/immersive_mode=true
-screen/orientation=0
+screen/orientation=1
 screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
@@ -195,3 +195,36 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.1]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="C:/Users/Joran/Git/AppleBaum/AppleBaum.exe"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
+application/icon=""
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
